# hexagonal-architecture-examples

./: README.md
python/: .gitignore
python/stock_trading/: Makefile  main.py  pyproject.toml
python/stock_trading/adapters/: simple_stock_price_provider.py  simple_trade_repository.py
python/stock_trading/domains/: trade.py
python/stock_trading/ports/: ports.py
python/stock_trading/services/: trade_service.py
python/stock_trading/tests/: test_service.py  test_trade.py  test_trade_repository.py
